--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -16,5 +16,5 @@
 @import "blocks/price";
 @import "blocks/cards";
 @import "blocks/post-content";
-@import "blocks/inner-page-footer";
+@import "blocks/page-footer";
 @import "blocks/copyright";
