--- a/source/sass/blocks/header-intro-wrapper.scss
+++ b/source/sass/blocks/header-intro-wrapper.scss
@@ -1,6 +1,6 @@
 .header-intro-wrapper {
   background-color: $blue--dark;
-  background-image: url("../../img/bg-back-mobile@1x.jpg");
+  background-image: url("../img/bg-back-mobile@1x.jpg");
   background-repeat: no-repeat;
   background-size: 100% auto;
   background-position: bottom;
