--- a/source/sass/blocks/page-footer.scss
+++ b/source/sass/blocks/page-footer.scss
@@ -1,10 +1,14 @@
-.inner-page-footer {
+.page-footer {
+  padding-top: 40px;
+
   text-align: center;
   background-color: $white;
 
-  &__logo {
-    width: 147px;
-    height: 40px;
+  &__social {
+    margin-top: 40px;
+  }
+
+  &__logo-link {
     margin: 40px auto;
   }
 
