--- a/source/sass/fonts.scss
+++ b/source/sass/fonts.scss
@@ -1,8 +1,8 @@
 @font-face {
   font-family: "OpenSans";
   src:
-    url("../fonts/opensans.woff") format("woff"),
-    url("../fonts/opensans.woff2") format("woff2");
+    url("../fonts/opensans.woff2") format("woff2"),
+    url("../fonts/opensans.woff") format("woff");
   font-weight: normal;
   font-style: normal;
 }
@@ -10,17 +10,17 @@
 @font-face {
   font-family: "OpenSans";
   src:
-    url("../fonts/opensanslight.woff") format("woff"),
-    url("../fonts/opensanslight.woff2") format("woff2");
+    url("../fonts/opensanslight.woff2") format("woff2"),
+    url("../fonts/opensanslight.woff") format("woff");
   font-weight: 200;
   font-style: normal;
 }
 
 @font-face {
-  font-family: "OpenSans-Bold";
+  font-family: "OpenSans";
   src:
-    url("../fonts/opensansbold.woff") format("woff"),
-    url("../fonts/opensansbold.woff2") format("woff2");
+    url("../fonts/opensansbold.woff2") format("woff2"),
+    url("../fonts/opensansbold.woff") format("woff");
   font-weight: bold;
   font-style: normal;
 }
