добавлены переменные цветов и изменены цвета в файлах стилей

--- a/source/sass/blocks/button.scss
+++ b/source/sass/blocks/button.scss
@@ -1,8 +1,7 @@
 .button {
-  font-family: $OpenSans;
+  font-family: $default-font;
   font-size: 18px;
   font-weight: bold;
   line-height: 18px;
-  color: $white;
   text-decoration: none;
 }
