--- a/source/sass/blocks/header-intro-wrapper.scss
+++ b/source/sass/blocks/header-intro-wrapper.scss
@@ -1,5 +1,5 @@
 .header-intro-wrapper {
-  background-color: $blue--dark;
+  background-color: $background-color-header--hidden;
   background-image: url("../img/bg-back-mobile@1x.jpg");
   background-repeat: no-repeat;
   background-size: 100% auto;
