--- a/source/sass/blocks/main-nav.scss
+++ b/source/sass/blocks/main-nav.scss
@@ -1,7 +1,7 @@
 .main-nav {
   //display: none;
 
-  //background-color: $blue--dark;
+  //background-color: $background-color-header--shown;
 
   &__list {
     list-style: none;
