--- a/source/sass/variables.scss
+++ b/source/sass/variables.scss
@@ -1,10 +1,23 @@
-$OpenSans: "Open Sans", "Arial", sans-serif;
+$default-font: "Open Sans", "Arial", sans-serif;
 
 $white: #ffffff;
 $black: #000000;
 $blue--dark: #283645;
 $grey--light: #f2f2f2;
 $pink: #d22856;
+
+$background-color-header--shown: $blue--dark;
+$background-color-header--hidden: rgba($black, 0.3);
+$background-color-download: $background-color-header--shown;
+$background-color-main: $white;
+$background-color-main--additional: $grey--light;
+$background-color-table-header: $blue--dark;
+
+$text-color: $blue--dark;
+$text-color--header: $white;
+$text-color--additional: $pink;
+
+$heading-color: $black;
 
 $menu-mobile-color: $white;
 $menu-mobile-color--hover: $pink;
