--- a/source/sass/blocks/download.scss
+++ b/source/sass/blocks/download.scss
@@ -4,16 +4,16 @@
   padding-bottom: 35px;
   padding-left: 20px;
 
-  color: $white;
+  color: $text-color--header;
   text-align: center;
   position: relative;
 
-  background-color: $blue--dark;
+  background-color: $background-color-download;
 
   &__legend {
     margin-bottom: 0;
 
-    font-family: $OpenSans;
+    font-family: $default-font;
     font-weight: 200;
     font-size: 14px;
     line-height: 24px;
