--- a/source/sass/blocks/intro.scss
+++ b/source/sass/blocks/intro.scss
@@ -3,10 +3,10 @@
   padding-left: 20px;
   padding-right: 20px;
 
-  font-family: $OpenSans;
+  font-family: $default-font;
   font-size: 24px;
   font-weight: 200;
-  color: $white;
+  color: $text-color--header;
 
   background-color: transparent;
 
