--- a/source/sass/blocks/page-footer.scss
+++ b/source/sass/blocks/page-footer.scss
@@ -2,7 +2,7 @@
   padding-top: 40px;
 
   text-align: center;
-  background-color: $white;
+  background-color: $background-color-main;
 
   &__social {
     margin-top: 40px;
