--- a/source/sass/blocks/page-header.scss
+++ b/source/sass/blocks/page-header.scss
@@ -1,5 +1,5 @@
 .page-header {
-  font-family: $OpenSans;
+  font-family: $default-font;
   font-weight: bold;
   font-size: 18px;
   line-height: 32px;
@@ -7,8 +7,8 @@
   text-transform: uppercase;
   color: $white;
 
-  //background-color: rgba($black, 0.3);
-  background: $blue--dark;
+  background-color: $background-color-header--shown;
+  //background-color: $background-color-header--hidden;
 
   &__wrapper {
     padding: 21px 20px;
