--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -18,3 +18,8 @@
 @import "blocks/post-content";
 @import "blocks/page-footer";
 @import "blocks/copyright";
+@import "blocks/contacts";
+@import "blocks/upload";
+@import "blocks/editing";
+@import "blocks/competition";
+@import "blocks/form";
