--- a/source/sass/variables.scss
+++ b/source/sass/variables.scss
@@ -3,8 +3,11 @@ $default-font: "Open Sans", "Arial", sans-serif;
 $white: #ffffff;
 $black: #000000;
 $blue--dark: #283645;
+$grey: #e5e5e5;
 $grey--light: #f2f2f2;
 $pink: #d22856;
+$green: #2aab6d;
+$green--dark: #1c9b5e;
 
 $background-color-header--shown: $blue--dark;
 $background-color-header--hidden: rgba($black, 0.3);
@@ -12,6 +15,22 @@ $background-color-download: $background-color-header--shown;
 $background-color-main: $white;
 $background-color-main--additional: $grey--light;
 $background-color-table-header: $blue--dark;
+
+$border-color: $grey;
+
+$button-color--hover: $white;
+$button-color--active: $white;
+$button-color--green: $green;
+$button-color--green-hover: $green--dark;
+$button-color--green-active: $green--dark;
+$button-color--green-disabled: $grey;
+$button-text-color: $white;
+$button-text-color--hover: $white;
+$button-text-color--active: rgba($pink, 0.3);
+$button-text-color--green: $white;
+$button-text-color--green-hover: $white;
+$button-text-color--green-active: rgba($white, 0.3);
+$button-text-color--green-disabled: $white;
 
 $text-color: $blue--dark;
 $text-color--header: $white;
