--- a/source/sass/blocks/button.scss
+++ b/source/sass/blocks/button.scss
@@ -8,9 +8,21 @@
 
   background-color: transparent;
 
+  &--download {
+    display: block;
+    box-sizing: border-box;
+    width: 100%;
+    height: 56px;
+    border: 3px solid $border-color;
+    border-radius: 30px;
+
+    font-size: 18px;
+    line-height: 50px;
+  }
+
   &:hover {
     background-color: $button-color--hover;
-    color: $button-text-color--active;
+    color: $button-text-color--hover;
   }
 
   &:active {
