--- a/source/sass/blocks/page-footer.scss
+++ b/source/sass/blocks/page-footer.scss
@@ -1,18 +1,70 @@
 .page-footer {
-  padding-top: 40px;
+  display: none;
+}
 
-  text-align: center;
-  background-color: $background-color-main;
+@media (min-width: $tablet-width) {
+  .page-footer {
+    display: block;
 
-  &__social {
-    margin-top: 40px;
+    text-align: center;
+    //background-color: $background-color-main;
+
+    //------- Временно ---------//
+    margin-top: 1508px;
+
+    &__wrapper {
+      display: flex;
+      justify-content: space-between;
+      width: 620px;
+      padding-top: 35px;
+      padding-right: 20px;
+      padding-bottom: 43px;
+      padding-left: 20px;
+      margin: 0 auto;
+
+      //------- Временно ---------//
+      min-height: 57px;
+    }
+
+    &__logo-link {
+      display: block;
+
+      //------- Временно ---------//
+      width: 147px;
+    }
+
+    &__social {
+      display: flex;
+      justify-content: space-between;
+      flex-wrap: wrap;
+
+      //------- Временно ---------//
+      width: 177px;
+    }
+
+    &__copyright {
+      //------- Временно ---------//
+      width: 148px;
+    }
   }
+}
 
-  &__logo-link {
-    margin: 40px auto;
-  }
+@media (min-width: $desktop-width) {
+  .page-footer {
+    //------- Временно ---------//
+    margin-top: 1805px;
 
-  &__copyright {
-    margin: 40px auto;
+    &__wrapper {
+      width: 940px;
+      padding-top: 70px;
+      padding-right: 10px;
+      padding-bottom: 67px;
+      padding-left: 10px;
+    }
+
+    &__copyright {
+      //------- Временно ---------//
+      width: 152px;
+    }
   }
 }
