--- a/source/sass/blocks/page-main.scss
+++ b/source/sass/blocks/page-main.scss
@@ -1,3 +1,12 @@
 .page-main {
   overflow: hidden;
+  //padding-top: 65px;
+  margin-top: -65px;
+}
+
+
+@media (min-width: $tablet-width) {
+  .page-main {
+    margin-top: -109px;
+  }
 }
