--- a/source/sass/blocks/site-list.scss
+++ b/source/sass/blocks/site-list.scss
@@ -4,16 +4,8 @@
     vertical-align: center;
 
     box-shadow: 0 1px 0 0 $black, inset 0 1px 0 0 rgba($white, 0.15);
-  }
 
-  &__item a {
-    display: block;
-
-    width: 100%;
-    height: 100%;
-
-    color: $menu-mobile-color;
-    text-decoration: none;
+    min-height: 64px;
   }
 
   &__item:hover a {
@@ -25,6 +17,40 @@
   }
 
   &__link {
+    display: block;
+
+    width: 100%;
+    height: 100%;
     padding: 16px 0;
+
+    color: $menu-mobile-color;
+    text-decoration: none;
+  }
+}
+
+@media (min-width: $tablet-width) {
+
+}
+
+@media (min-width: $desktop-width) {
+  .site-list {
+    display: flex;
+    flex-wrap: wrap;
+    padding-right: 10px;
+
+    &__item {
+      height: 109px;
+      padding-left: 80px;
+
+      font-weight: normal;
+      font-size: 18px;
+      line-height: 109px;
+      text-transform: none;
+    }
+
+    &__link {
+      padding: 0;
+      height: auto;
+    }
   }
 }
