--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -1,17 +1,17 @@
 @import "normalize";
 @import "fonts";
 @import "variables";
+@import "scaffolding";
 @import "blocks/visually-hidden";
 @import "blocks/button";
 @import "blocks/list";
-@import "blocks/header-intro-wrapper";
 @import "blocks/page-header";
 @import "blocks/main-nav";
 @import "blocks/site-list";
-@import "blocks/intro";
 @import "blocks/page-main";
-@import "blocks/download";
+@import "blocks/intro";
 @import "blocks/features";
+@import "blocks/research";
 @import "blocks/reviews";
 @import "blocks/price";
 @import "blocks/cards";
@@ -23,3 +23,6 @@
 @import "blocks/editing";
 @import "blocks/competition";
 @import "blocks/form";
+
+// --------- Временно для сетки -------------- //
+@import "outline";
