--- a/source/sass/blocks/intro.scss
+++ b/source/sass/blocks/intro.scss
@@ -9,8 +9,15 @@
   background-position: center 0;
   background-repeat: no-repeat;
 
-  //------- Временно для сетки ----------//
-  min-height: 632px;
+  &__page-title {
+    margin-top: 94px;
+    margin-bottom: 83px;
+    padding-right: 20px;
+    padding-left: 20px;
+
+    font-weight: 200;
+    font-size: 24px;
+  }
 
   &__wrapper {
     width: 280px;
@@ -20,7 +27,7 @@
     padding-left: 20px;
     margin: 0 auto;
 
-    //background-image: url("../img/iphone-hand-mobile@1x.png");
+    background-image: url("../img/iphone-hand-mobile@1x.png");
     background-position: 0 176px;
     background-repeat: no-repeat;
   }
@@ -68,7 +75,7 @@
       width: 620px;
       padding-top: 109px;
 
-      //background-image: url("../img/iphone-hand-tablet@1x.png");
+      background-image: url("../img/iphone-hand-tablet@1x.png");
       background-position: -20px bottom;
       background-repeat: no-repeat;
     }
@@ -113,7 +120,7 @@
 
 @media (min-width: $desktop-width) {
   .intro {
-    background-image: url("../img/bg-back-desktop@1x.jpg");
+    //background-image: url("../img/bg-back-desktop@1x.jpg");
 
     &__wrapper {
       width: 940px;
