--- a/source/sass/outline.scss
+++ b/source/sass/outline.scss
@@ -4,6 +4,7 @@
 
 body {
   background: $background-color-main url("../img/pink-index-mobile-menu.png") no-repeat 50% 0;
+  //background: $background-color-main url("../img/pink-photo-mobile.png") no-repeat 50% 0;
   background-size: 320px auto;
   min-height: 3430px;
 }
@@ -11,6 +12,7 @@ body {
 @media (min-width: $tablet-width) {
   body {
     background: $background-color-main url("../img/pink-index-tablet.png") no-repeat 50% 0;
+    //background: $background-color-main url("../img/pink-photo-tablet.png") no-repeat 50% 0;
     background-size: 660px auto;
     min-height: 3678px;
   }
@@ -19,6 +21,7 @@ body {
 @media (min-width: $desktop-width) {
   body {
     background: $background-color-main url("../img/pink-index-desktop.png") no-repeat 50% 0;
+    //background: $background-color-main url("../img/pink-photo-desktop.png") no-repeat 50% 0;
     background-size: 1200px auto;
     min-height: 4215px;
   }
