заканцивает основную сетку photo.html и делает фиксы сетки index.html

--- a/source/sass/blocks/contacts.scss
+++ b/source/sass/blocks/contacts.scss
@@ -3,7 +3,7 @@
   position: relative;
   text-align: center;
 
-  // ВРЕМЕННО
+  // ВРЕМЕННО ВМЕСТО КАРТЫ
   padding-bottom: 220px;
 
   &__wrapper {
@@ -78,7 +78,7 @@
   .contacts {
     padding-top: 50px;
 
-    // ВРЕМЕННО
+    // ВРЕМЕННО ВМЕСТО КАРТЫ
     padding-bottom: 400px;
 
     &__wrapper {
@@ -112,7 +112,7 @@
 @media (min-width: $desktop-width) {
   .contacts {
 
-    // ВРЕМЕННО
+    // ВРЕМЕННО ВМЕСТО КАРТЫ
     padding-bottom: 520px;
 
     &__wrapper {
