--- a/source/sass/blocks/reviews.scss
+++ b/source/sass/blocks/reviews.scss
@@ -9,7 +9,7 @@
     margin: 0 auto;
   }
 
-  //background-color: $background-color-main;
+  background-color: $background-color-main;
 
   &__quotes-item {
     display: none;
