--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -17,7 +17,6 @@
 @import "blocks/cards";
 @import "blocks/post-content";
 @import "blocks/page-footer";
-@import "blocks/copyright";
 @import "blocks/contacts";
 @import "blocks/upload";
 @import "blocks/editing";
@@ -25,4 +24,4 @@
 @import "blocks/form";
 
 // --------- Временно для сетки -------------- //
-@import "outline";
+//@import "outline";
