--- a/source/sass/variables.scss
+++ b/source/sass/variables.scss
@@ -34,6 +34,21 @@ $button-text-color--green: $white;
 $button-text-color--green-hover: $white;
 $button-text-color--green-active: rgba($white, 0.3);
 $button-text-color--green-disabled: $white;
+$button-post-border: $pink;
+$button-post-text: $pink;
+$button-post-text--hover: $white;
+$button-post-background--hover: $pink;
+$button-post-text--active: rgba($white, 0.3);
+$button-post-background--active: $pink;
+$button-reset-border: rgba($blue--dark, 0.1);
+$button-reset-border--hover: rgba($blue--dark, 0.3);
+$button-reset-border--active: rgba($blue--dark, 0.3);
+$button-reset-text: rgba($blue--dark, 0.1);
+$button-reset-text--hover: rgba($blue--dark, 0.3);
+$button-reset-text--active: rgba($white, 0.3);
+$button-reset-background: transparent;
+$button-reset-background--hover: transparent;
+$button-reset-background--active: rgba($blue--dark, 0.3);
 
 $text-color: $blue--dark;
 $text-color--header: $white;
