--- a/source/sass/blocks/button.scss
+++ b/source/sass/blocks/button.scss
@@ -1,4 +1,11 @@
 .button {
+  display: block;
+  box-sizing: border-box;
+  width: 100%;
+  height: 56px;
+  border: 3px solid $border-color;
+  border-radius: 30px;
+
   font-family: $default-font;
   font-size: 21px;
   font-weight: bold;
@@ -9,13 +16,6 @@
   background-color: transparent;
 
   &--download {
-    display: block;
-    box-sizing: border-box;
-    width: 100%;
-    height: 56px;
-    border: 3px solid $border-color;
-    border-radius: 30px;
-
     font-size: 18px;
     line-height: 50px;
   }
@@ -49,7 +49,46 @@
   }
 
   &--green:disabled {
+    border-color: $button-color--green-disabled;
     background-color: $button-color--green-disabled;
     color: $button-text-color--green-disabled;
+  }
+
+  &--post {
+    font-size: 18px;
+    line-height: 18px;
+    border: 3px solid $button-post-border;
+    background-color: transparent;
+    color: $button-post-text;
+  }
+
+  &--post:hover {
+    background-color: $button-post-background--hover;
+    color: $button-post-text--hover;
+  }
+
+  &--post:active {
+    background-color: $button-post-background--active;
+    color: $button-post-text--active;
+  }
+
+  &--reset {
+    font-size: 18px;
+    line-height: 18px;
+    border: 3px solid $button-reset-border;
+    background-color: $button-reset-background;
+    color: $button-reset-text;
+  }
+
+  &--reset:hover {
+    border-color: $button-reset-border--hover;
+    background-color: $button-reset-background--hover;
+    color: $button-reset-text--hover;
+  }
+
+  &--reset:active {
+    border-color: $button-reset-border--active;
+    background-color: $button-reset-background--active;
+    color: $button-reset-text--active;
   }
 }
