--- a/source/sass/blocks/cards.scss
+++ b/source/sass/blocks/cards.scss
@@ -1,15 +1,19 @@
 .cards {
-  padding-right: 20px;
-  padding-left: 20px;
-  padding-top: 54px;
+  padding-top: 32px;
 
   background-color: $background-color-main;
 
+  &__wrapper {
+    width: 280px;
+    padding-right: 20px;
+    padding-left: 20px;
+    margin: 0 auto;
+  }
+
   &__slogan {
     text-align: center;
-    margin-top: 54px;
     margin-right: 15px;
-    margin-bottom: 56px;
+    margin-bottom: 50px;
     margin-left: 15px;
 
     font-family: $default-font;
@@ -19,9 +23,64 @@
     color: $text-color;
   }
 
+  &__list {
+    width: 100%;
+  }
+
   &__item {
     margin-bottom: 20px;
 
     background-color: $background-color-main--additional;
+  }
+}
+
+@media (min-width: $tablet-width) {
+  .cards {
+    &__wrapper {
+      width: 620px;
+    }
+
+    &__slogan {
+      margin: 59px 0;
+      padding: 0 25px;
+      margin-bottom: 108px;
+
+      font-size: 18px;
+    }
+
+    &__list {
+      display: flex;
+      justify-content: space-between;
+      flex-wrap: wrap;
+    }
+
+    &__item {
+      width: 300px;
+    }
+
+    &__item--panorama-of-the-day {
+      order: -1;
+      width: 100%;
+      margin-bottom: 53px;
+    }
+  }
+}
+
+@media (min-width: $desktop-width) {
+  .cards {
+    &__wrapper {
+      width: 940px;
+      padding-right: 10px;
+      padding-left: 10px;
+    }
+
+    &__slogan {
+      padding: 0 149px;
+      margin-bottom: 90px;
+    }
+
+    &__item {
+      margin-bottom: 54px;
+    }
   }
 }
