--- a/source/sass/blocks/features.scss
+++ b/source/sass/blocks/features.scss
@@ -63,38 +63,36 @@
     margin-bottom: -43px;
   }
 
-  &__picture--grey {
+  &__picture--grey,
+  &__picture--pink{
     display: none;
   }
 
-  &__picture--pink {
-    display: none;
-  }
+  &::before {
+    content: "";
+    display: block;
+    position: absolute;
 
-  //&::before {
-  //  content: "";
-  //  display: block;
-  //  position: absolute;
-  //
-  //  width: 130vw;
-  //  height: 1050px;
-  //  top: 234px;
-  //  left: calc(-60vw + 50%);
-  //  transform: rotate(-5.5deg);
-  //
-  //  z-index: -1;
-  //  background-color: $background-color-main--additional;
-  //}
+    width: 130vw;
+    height: 1050px;
+    top: 234px;
+    left: calc(-60vw + 50%);
+    transform: rotate(-5.5deg);
+
+    z-index: -1;
+    background-color: $background-color-main--additional;
+  }
 }
 
 @media (min-width: $tablet-width) {
   .features {
     &__wrapper {
       width: 620px;
+      padding-top: 40px;
     }
 
     &__slogan {
-      margin-top: 46px;
+      margin-top: 6px;
       margin-bottom: 47px;
       font-size: 40px;
       line-height: 50px;
@@ -118,8 +116,17 @@
       min-height: 482px;
     }
 
+    &__list--descriptions {
+      padding-top: 54px;
+    }
+
     &__list {
+      text-align: left;
       width: 50%;
+    }
+
+    &__text {
+      margin-bottom: 35px;
     }
 
     &::before {
@@ -136,7 +143,22 @@
       width: 940px;
       padding-left: 10px;
       padding-right: 10px;
+      padding-top: 0;
     }
+
+    &__slogan {
+      margin-top: 67px;
+      margin-bottom: 77px;
+
+      font-size: 50px;
+      line-height: 60px;
+    }
+
+    &__picture--grey,
+    &__picture--pink{
+      display: block;
+    }
+
 
     &__lists-wrapper {
       display: block;
@@ -144,13 +166,8 @@
 
     &__list {
       width: auto;
-    }
-
-    &__slogan {
-      margin-top: 67px;
-
-      font-size: 50px;
-      line-height: 60px;
+      display: flex;
+      justify-content: space-between;
     }
 
     &__list--pictures {
@@ -159,8 +176,31 @@
     }
 
     &__list--descriptions {
+      padding-top: 0;
       //------ Временно --------//
-      min-height: 325px;
+      min-height: 297px;
+    }
+
+    &__item {
+      text-align: center;
+    }
+
+    &__item--description {
+      width: 300px;
+    }
+
+    &__title {
+      margin-bottom: 30px;
+      padding: 0 30px;
+
+      font-size: 30px;
+      line-height: 26px;
+    }
+
+    &__text {
+      padding: 0 26px;
+      font-size: 18px;
+      line-height: 30px;
     }
 
     &::before {
